architecture/linux-utils/aks/ingress-controller/example/demo-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo
  labels:
    app: demo
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: demo
